# mash_todo

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
migrations/: 20250426195848_add_todos.up.sql
public/css/: app.css
src/: db.rs  handlers.rs  lib.rs  main.rs  routes.rs  state.rs  todos.rs  views.rs
tests/: integration_tests.rs
