[package]
name = "mash_todo"
description = "A simple TODO app written on the MASH stack."
authors = ["Steve Troetti (@stevexciv)"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["mash", "maud", "axum", "sqlx", "htmx", "todo"]

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
clap = { version = "4.5.37", features = ["derive", "env"] }
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
